--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,4 @@ tensorflow-gpu==1.4.1  # Change to tensorflow==1.4.1 if you need to run CPU-only
 tensorflow-tensorboard==0.4.0
 tqdm==4.19.5
 #moa
+#stop
